fix: changed the hardcoded overflow on the root, sidebar has a position fixed. added a margin to app content to compensate sidebar offset.

--- a/src/index.css
+++ b/src/index.css
@@ -11,10 +11,6 @@ body {
   padding: 0;
 }
 
-#root{
-  overflow-y:hidden;
-}
-
 html[data-theme="dark"] {
     --bg-color: #121212;
     --text-color: #ffffff;
